TheKabal (1 March 2013)
--------------------------------------
Updated composer to latest version
db_op_result has been replaced by \bnt\dbop::dbresult, which is auto-loaded from the vendor/bnt directory.
num_torps has been replaced by \bnt\CalcLevels::Torpedoes, which is auto-loaded from the vendor/bnt directory.
num_beams has been replaced by \bnt\CalcLevels::Beams, which is auto-loaded from the vendor/bnt directory.
num_fighters has been replaced by \bnt\CalcLevels::Fighters, which is auto-loaded from the vendor/bnt directory.
num_energy has been replaced by \bnt\CalcLevels::Energy, which is auto-loaded from the vendor/bnt directory.

TheKabal (24 February 2013)
--------------------------------------
Moved setGamepath and setGamedomain out into autoloaded classes, reducing the size of common.php

TheKabal (23 February 2013)
--------------------------------------
Add a Registry class to BNT, which will hold variables we previously used in the global space (timer, lang, etc)
All instances of include 'error.php', should reference the path

TheMightyDude (14 February 2013)
--------------------------------------
Fixed Exploit in IGB Loan System.

TheMightyDude (10 February 2013)
--------------------------------------
Fixed a bug where a player was on their planet when it was attacked, resulting in their planets not being set to unowned.
A Database error occurred in includes/db_kill_player.php on line 42 (called from: planet.php: Table 'bnt_planets' was not locked with LOCK TABLES
A Database error occurred in includes/db_kill_player.php on line 60 (called from: planet.php: Table 'bnt_planets' was not locked with LOCK TABLES
A Database error occurred in includes/db_kill_player.php on line 73 (called from: planet.php: Table 'bnt_sector_defence' was not locked with LOCK TABLES
A Database error occurred in includes/db_kill_player.php on line 91 (called from: planet.php: Table 'bnt_news' was not locked with LOCK TABLES

TheKabal (10 February 2013)