@@ -65,8 +65,8 @@ function db_kill_player ($db, $ship_id, $remove_planets = false)
     {
         foreach ($sectors as $sector)
         {
-            include './includes/calc_ownership.php';
-            calc_ownership ($db, $sector);
+            include_once './includes/calc_ownership.php';
+            calc_ownership ($db, $sector, $min_bases_to_own, $langvars);
         }
     }
 
