@@ -1,5 +1,6 @@
 TheKabal (1 March 2013)
 --------------------------------------
+Redo calc_ownership so that it does not use global variables, in preparation for migrating it to be autoloaded
 Updated composer to latest version
 db_op_result has been replaced by \bnt\dbop::dbresult, which is auto-loaded from the vendor/bnt directory.
 num_torps has been replaced by \bnt\CalcLevels::Torpedoes, which is auto-loaded from the vendor/bnt directory.
